--- a/app/views/admin/category/_category.erb
+++ b/app/views/admin/category/_category.erb
@@ -1,4 +1,6 @@
 <li>
+  <div class="panel panel-default">
+    <div class="panel-body">
     <div class="admin-show">
         Name:
         <span class="category-name">
@@ -26,5 +28,6 @@
                  data: { confirm: 'Are you sure?'},
                  :remote => true,
                  :class => 'admin-delete' %>
-  <hr>
+    </div>
+  </div>
 </li>
