--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,4 +1,12 @@
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <%= render 'shared/search' %>
+    </ul>
+  </div>
+</nav>
+
 
 <div align="center">
     <ul id="items">
