--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -1,19 +1,25 @@
-<div id="content">
+<div class="container">
 
   <h1>Listing tags</h1>
 
-  <ul id="admin-list">
+  <ul id="admin-list" style="list-style-type: none">
     <% @tags.each do  |tag| %>
         <%= render tag %>
     <% end %>
   </ul>
 
-  <h2>Create new tag</h2>
-  <%= form_for [:admin, @tag], remote: true do |f| %>
-      <%= f.label :name %><br>
-      <%= f.text_field(:name) %><br>
-      <%= f.label :synonyms %><br>
-      <%= f.text_area :synonyms %><br>
-      <%= f.submit %>
-  <% end %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+        Create new tag
+    </div>
+    <div class="panel-body">
+      <%= form_for [:admin, @tag], remote: true do |f| %>
+          <%= f.label :name %><br>
+          <%= f.text_field(:name) %><br>
+          <%= f.label :synonyms %><br>
+          <%= f.text_area :synonyms %><br>
+          <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
 </div>
