--- a/app/views/shopping_carts/_index.html.erb
+++ b/app/views/shopping_carts/_index.html.erb
@@ -18,16 +18,18 @@
 <tfoot>
 <tr>
   <th colspan="3">Total: </th>
-  <td id="total-price">$<%= sprintf("%.2f", @shopping_cart.total_price_cents / 100) %></td>
+  <td id="total-price">$<%= @shopping_cart.total_price %></td>
 </tr>
 <tr>
   <td>
-  <%= link_to 'Empty cart',  '/shopping_cart/destroy_all_line_items', class: 'destroy-all-line-items', remote: true %>
+  <%= form_tag '/shopping_cart/destroy_all_line_items', class: 'destroy-all-line-items', remote: true do %>
+        <%= submit_tag 'Empty cart' %>
+  <% end %>
   </td>
 </tr>
 <tr>
   <td>
-    <form action="/orders/checkout">
+    <form action="/purchases/checkout">
       <input type="submit" value="Checkout">
     </form>
   </td>
